tests/snapshots/main__prefer_simple_dotted@Cargo.toml.snap
---
source: tests/main.rs
expression: input
snapshot_kind: text
---
[workspace]
members = [
    "cli",
    "config",
    "db",
    "web",
    "macros"
]
resolver = "2"
default-members = ["web"]

[workspace.metadata.cargo-autoinherit]
# Skip cargo-autoinherit for these packages
exclude-members = [
    "cargo-autoinherit-test-web"
]

[workspace.dependencies]
anyhow = "1.0"
cargo-autoinherit-test-config = { path = "config" }
clap = "4.4"
cruet = "0.14"
dotenvy = "0.15"
fake = "2.9"
figment = "0.10"
googletest = "0.12"
guppy = "0.17"
include_dir = "0.7"
insta = "1.38"
liquid = "~0.26"
quote = "1.0"
rand = "0.8"
regex = "1.10"
serde = "1.0"
sqlx = "0.8"
syn = "2.0"
thiserror = "1.0"
tokio = "1.34"
tracing = "0.1"
url = "2.5"
utoipa = "5.1.3"
uuid = "1.5"
validator = "0.18"
