tests/snapshots/main__with_excluded_member@Cargo.toml.snap
---
source: tests/main.rs
expression: input
snapshot_kind: text
---
[workspace]
members = [
    "cli",
    "config",
    "db",
    "web",
    "macros"
]
resolver = "2"
default-members = ["web"]

[workspace.metadata.cargo-autoinherit]
# Skip cargo-autoinherit for these packages
exclude-members = [
    "cargo-autoinherit-test-web"
]

[workspace.dependencies]
anyhow = "1.0"
cargo-autoinherit-test-config = { path = "config" }
dotenvy = "0.15"
fake = "2.9"
figment = "0.10"
googletest = "0.12"
quote = "1.0"
rand = "0.8"
regex = "1.10"
serde = "1.0"
sqlx = "0.8"
syn = "2.0"
thiserror = "1.0"
tracing = "0.1"
utoipa = "5.1.3"
uuid = "1.5"
validator = "0.18"
